--- a/index.html
+++ b/index.html
@@ -1916,12 +1916,20 @@
                 description: "Online marketplace with product listings and secure payment system.",
                 tags: ["E-commerce", "Marketplace", "Payment System"]
             },
+            
             {
                 title: "E Products",
                 url: "https://darius2322.github.io/E-Product/",
                 image: "https://images.unsplash.com/photo-1563013544-824ae1b704d3?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80",
                 description: "Online marketplace for E product listings and secure payment system.",
                 tags: ["E-commerce", "Marketplace", "Payment System"]
+            },
+             {
+                title: "pamoja cyber",
+                url: "https://darius2322.github.io/pamoja-cyber/",
+                image: "https://images.unsplash.com/photo-1563013544-824ae1b704d3?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80",
+                description: "Online marketplace for E product listings and secure payment system.",
+                tags: ["E-commerce", "cyber", "online",]
             },
             {
                 title: "MILLY",
