--- a/index.html
+++ b/index.html
@@ -1925,6 +1925,13 @@
                 tags: ["E-commerce", "Marketplace", "Payment System"]
             },
              {
+                title: "chucrh",
+                url: "https://darius2322.github.io/church/",
+                image: "https://images.unsplash.com/photo-1548625149-fc4a29cf7092?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=764",
+                description: "Online worshipplace for people listings,worshiping and secure paymentand joining system.",
+                tags: ["church", "giving", "worship"]
+            },
+             {
                 title: "pamoja cyber",
                 url: "https://darius2322.github.io/pamoja-cyber/",
                 image: "https://images.unsplash.com/photo-1563013544-824ae1b704d3?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80",
